cmake_minimum_required(VERSION 3.27)
project(Practicum_6)

set(CMAKE_CXX_STANDARD 14)

add_executable(Practicum_6
        Pract_06_zad1.cpp
        Pract_06_Zad1_T.cpp
        pract_06_zad2_sortedArr.cpp
        pract_06_zad3.cpp
        pract_06_zad4.cpp
        pract_06_zad5.cpp
        pract_06_zad6.cpp
        pract_06_zad7.cpp
        pract_06_zad8.cpp)
